# src/routes/connection.route.js
@@ -1,7 +1,8 @@
 const express = require('express');
 const router = express.Router();
-const connectionController = require('../controllers/connectionController');
+const connectionController = require('../controllers/connection.controller');
 
 router.get('/status', connectionController.getConnectionStatus);
+router.get('/unregistered', connectionController.getUnregisteredDevices);
 
 module.exports = router;
